Undo causes crash with "Load UI" disabled #75893

Closed
opened 2020-04-19 13:10:20 +02:00 by Antti Teittinen · 14 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce RTX 2060

Blender Version
Broken: 2.83 (sub 13), branch: master, commit date: 2020-04-17 20:03, hash: 76b3aac802, type: Release, also in 2.90 (1f1520a045)
build date: 2020-04-17, 21:04:49
Worked: Blender 2.82a

Short description of error

Blender crashes when performing Undo with Load UI disabled

Exact steps for others to reproduce the error

CrashTest.blend

  • Open Blender
  • Reset to factory settings (File - Defaults - Load Factory Settings)
  • In Preferences, turn off Load UI (Save & Load section)
  • Click "Save Preferences"
  • Open the file CrashTest.blend
  • Perform any action in the scene (I rotated the camera)
  • Perform Undo (Ctrl-Z)
  • Observe crash

Note! If I clear the scene, I can perform any action and undo it without a crash. For example I created a cube, rotated it and performed an undo without a problem.

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce RTX 2060 **Blender Version** Broken: 2.83 (sub 13), branch: master, commit date: 2020-04-17 20:03, hash: 76b3aac802f9, type: Release, also in 2.90 (1f1520a04503) build date: 2020-04-17, 21:04:49 Worked: Blender 2.82a **Short description of error** Blender crashes when performing Undo with *Load UI* disabled **Exact steps for others to reproduce the error** [CrashTest.blend](https://archive.blender.org/developer/F8483291/CrashTest.blend) - Open Blender - Reset to factory settings (File - Defaults - Load Factory Settings) - In Preferences, turn off Load UI (Save & Load section) - Click "Save Preferences" - Open the file CrashTest.blend - Perform any action in the scene (I rotated the camera) - Perform Undo (Ctrl-Z) - Observe crash **Note!** If I clear the scene, I can perform any action and undo it without a crash. For example I created a cube, rotated it and performed an undo without a problem.

Added subscriber: @funksy

Added subscriber: @funksy

#75978 was marked as duplicate of this issue

#75978 was marked as duplicate of this issue
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

There were some fixes for the new undo, and I can't recreate this here. Even with various memory utilities enabled (that should aggressively check for and detect any memory issues, which are typically the cause of such crashes).

Could you test with a newer 2.83 and if that doesn't work, a 2.90 build? https://builder.blender.org/download/

There were some fixes for the new undo, and I can't recreate this here. Even with various memory utilities enabled (that should aggressively check for and detect any memory issues, which are typically the cause of such crashes). Could you test with a newer 2.83 and if that doesn't work, a 2.90 build? https://builder.blender.org/download/

Tested with the latest 2.90 (1f1520a045) and it works fine. No crash.

Tested with the latest 2.90 (1f1520a04503) and it works fine. No crash.
Member

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Julian Eisel self-assigned this 2020-04-19 19:04:04 +02:00
Member

Great, closing then :)

Great, closing then :)

I managed to recreate this bug also in 2.90 (1f1520a045). Might warrant a reopening.

  1. Open Blender
  2. Reset to factory settings (File - Defaults - Load Factory Settings)
  3. In Preferences, turn off Load UI (Save & Load section)
  4. Click "Save Preferences"
  5. Open the file CrashTest.blend
  6. Perform any action in the scene (I rotated the camera)
  7. Perform Undo (Ctrl-Z)
  8. Observe crash
I managed to recreate this bug also in 2.90 (1f1520a04503). Might warrant a reopening. 1. Open Blender 2. Reset to factory settings (File - Defaults - Load Factory Settings) 3. In Preferences, **turn off Load UI** (Save & Load section) 4. Click "Save Preferences" 5. Open the file CrashTest.blend 6. Perform any action in the scene (I rotated the camera) 7. Perform Undo (Ctrl-Z) 8. Observe crash
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

Getting a failed assert:

/home/guest/blender/software/git/blender/build/bin/blender(BLI_system_backtrace+0xb9) [0x6466b79]
/home/guest/blender/software/git/blender/build/bin/blender(BKE_main_idmap_create+0xb57) [0x4f85349]
/home/guest/blender/software/git/blender/build/bin/blender(blo_make_old_idmap_from_main+0x116) [0x1a5176b]
/home/guest/blender/software/git/blender/build/bin/blender(BLO_read_from_memfile+0x3d7) [0x1a38113]
/home/guest/blender/software/git/blender/build/bin/blender(BKE_blendfile_read_from_memfile+0x66) [0x4f3644f]
/home/guest/blender/software/git/blender/build/bin/blender(BKE_memfile_undo_decode+0x38e) [0x4f329a8]
/home/guest/blender/software/git/blender/build/bin/blender() [0x466da72]
/home/guest/blender/software/git/blender/build/bin/blender() [0x4ff0184]
/home/guest/blender/software/git/blender/build/bin/blender(BKE_undosys_step_undo_with_data_ex+0x555) [0x4ff5fbd]
/home/guest/blender/software/git/blender/build/bin/blender(BKE_undosys_step_undo_with_data+0x2d) [0x4ff65b2]
/home/guest/blender/software/git/blender/build/bin/blender(BKE_undosys_step_undo+0x89) [0x4ff663d]
/home/guest/blender/software/git/blender/build/bin/blender() [0x46648d0]
/home/guest/blender/software/git/blender/build/bin/blender() [0x46651db]
/home/guest/blender/software/git/blender/build/bin/blender() [0x466648d]
/home/guest/blender/software/git/blender/build/bin/blender() [0x1913845]
/home/guest/blender/software/git/blender/build/bin/blender() [0x191b677]
/home/guest/blender/software/git/blender/build/bin/blender() [0x191f22b]
/home/guest/blender/software/git/blender/build/bin/blender() [0x19228fd]
/home/guest/blender/software/git/blender/build/bin/blender() [0x1923c7a]
/home/guest/blender/software/git/blender/build/bin/blender(wm_event_do_handlers+0x249a) [0x192a0de]
/home/guest/blender/software/git/blender/build/bin/blender(WM_main+0x30) [0x18f814c]
/home/guest/blender/software/git/blender/build/bin/blender() [0xbe4883]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7fdd39846e0b]
/home/guest/blender/software/git/blender/build/bin/blender(_start+0x2a) [0xbe3cba]
BLI_assert failed: /home/guest/blender/software/git/blender/src/source/blender/blenkernel/intern/main_idmap.c:126, BKE_main_idmap_create(), at 'existing_key == 0'
Aborted
Getting a failed assert: ``` /home/guest/blender/software/git/blender/build/bin/blender(BLI_system_backtrace+0xb9) [0x6466b79] /home/guest/blender/software/git/blender/build/bin/blender(BKE_main_idmap_create+0xb57) [0x4f85349] /home/guest/blender/software/git/blender/build/bin/blender(blo_make_old_idmap_from_main+0x116) [0x1a5176b] /home/guest/blender/software/git/blender/build/bin/blender(BLO_read_from_memfile+0x3d7) [0x1a38113] /home/guest/blender/software/git/blender/build/bin/blender(BKE_blendfile_read_from_memfile+0x66) [0x4f3644f] /home/guest/blender/software/git/blender/build/bin/blender(BKE_memfile_undo_decode+0x38e) [0x4f329a8] /home/guest/blender/software/git/blender/build/bin/blender() [0x466da72] /home/guest/blender/software/git/blender/build/bin/blender() [0x4ff0184] /home/guest/blender/software/git/blender/build/bin/blender(BKE_undosys_step_undo_with_data_ex+0x555) [0x4ff5fbd] /home/guest/blender/software/git/blender/build/bin/blender(BKE_undosys_step_undo_with_data+0x2d) [0x4ff65b2] /home/guest/blender/software/git/blender/build/bin/blender(BKE_undosys_step_undo+0x89) [0x4ff663d] /home/guest/blender/software/git/blender/build/bin/blender() [0x46648d0] /home/guest/blender/software/git/blender/build/bin/blender() [0x46651db] /home/guest/blender/software/git/blender/build/bin/blender() [0x466648d] /home/guest/blender/software/git/blender/build/bin/blender() [0x1913845] /home/guest/blender/software/git/blender/build/bin/blender() [0x191b677] /home/guest/blender/software/git/blender/build/bin/blender() [0x191f22b] /home/guest/blender/software/git/blender/build/bin/blender() [0x19228fd] /home/guest/blender/software/git/blender/build/bin/blender() [0x1923c7a] /home/guest/blender/software/git/blender/build/bin/blender(wm_event_do_handlers+0x249a) [0x192a0de] /home/guest/blender/software/git/blender/build/bin/blender(WM_main+0x30) [0x18f814c] /home/guest/blender/software/git/blender/build/bin/blender() [0xbe4883] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7fdd39846e0b] /home/guest/blender/software/git/blender/build/bin/blender(_start+0x2a) [0xbe3cba] BLI_assert failed: /home/guest/blender/software/git/blender/src/source/blender/blenkernel/intern/main_idmap.c:126, BKE_main_idmap_create(), at 'existing_key == 0' Aborted ```
Julian Eisel changed title from Undo causes crash to Undo causes crash with "Load UI" disabled 2020-04-20 01:15:51 +02:00
Julian Eisel was unassigned by Bastien Montagne 2020-04-21 15:54:27 +02:00
Bastien Montagne self-assigned this 2020-04-21 15:54:27 +02:00

This issue was referenced by bc3aab3fa5

This issue was referenced by bc3aab3fa547e60d2361d5a50cdc79885bdc7355

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @machieb, @brecht

Added subscribers: @machieb, @brecht
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75893
No description provided.